# bazel-lib

./: .bazelrc  .pre-commit-config.yaml  README.md  go.mod  go.sum  internal_deps.bzl
.aspect/bazelrc/: javascript.bazelrc
.aspect/workflows/terraform/: workflows.tf
.circleci/: config.yml
lib/: BUILD.bazel  extensions.bzl  repositories.bzl  toolchains.bzl
lib/private/: BUILD.bazel  coreutils_toolchain.bzl  jq.bzl  ripgrep_toolchain.bzl  run_binary.bzl  sd_toolchain.bzl  tar.bzl  write_source_file.bzl
lib/tests/ripgrep/: BUILD.bazel
lib/tests/run_binary_expansions/: expansions.sh
lib/tests/sd/: BUILD.bazel
lib/tests/tar/: BUILD.bazel
tools/: coreutils_mirror_release.sh  ripgrep_mirror_release.sh  sd_mirror_release.sh
