load("//lib:testing.bzl", "assert_contains")

genrule(
    name = "ripgrep",
    srcs = [],
    outs = ["ripgrep.txt"],
    cmd = """echo ripgrep | $(RIPGREP_BIN) ripgrep > $@""",
    toolchains = ["@ripgrep_toolchains//:resolved_toolchain"],
)

assert_contains(
    name = "test_ripgrep",
    actual = "ripgrep.txt",
    expected = """ripgrep""",
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
